user must login with cas to access admin interface

--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -41,8 +41,8 @@
       <img src="../images/logo.png" />
     </div>
     <div id="menu">
-      <paper-fab on-click="toggleMenu" icon="menu"></paper-fab>
-      <paper-dialog id="menuDialog" class="menu-dialog" entry-animation="slide-from-left-animation" exit-animation="slide-right-animation" with-backdrop>
+      <!--<paper-fab on-click="toggleMenu" icon="menu"></paper-fab> -->
+      <!--<paper-dialog id="menuDialog" class="menu-dialog" entry-animation="slide-from-left-animation" exit-animation="slide-right-animation" with-backdrop>
         <template is="dom-bind">
           <paper-toolbar class="menu-toolbar">
             <paper-tabs class="flex" selected="{{selected}}">
@@ -53,7 +53,7 @@
           </paper-toolbar>
           <iron-pages selected="{{selected}}">
             <section>
-              <!-- About -->
+      \
               <div class="content">
                 Shuttle Tracking is designed and maintained by the Student Senate Web Technologies Group.<br/>
                 This service is supported by the Parking and Transportation Office, the Administration Division and dotCIO. <br/>
@@ -62,13 +62,13 @@
               </div>
             </section>
             <section>
-              <!-- Schedule -->
+
               <div class="content">
                 Download the RPI Parking and Transportation shuttle schedule.
               </div>
             </section>
             <section>
-              <!-- API Docs & KML -->
+               API Docs & KML
               <div class="content">
                 Developers may use our API to enrich their applications, create mobile applications, or implement any other creative ideas!<br/>
                 Visit our wiki to learn more about using our API.
@@ -78,7 +78,7 @@
             </section>
           </iron-pages>
         </template>
-      </paper-dialog>
+      </paper-dialog>-->
     </div>
   </template>
 
