--- a/static/css/application.css
+++ b/static/css/application.css
@@ -11,7 +11,24 @@ html, body {
   color: #ffffff;
 }
 
+.title{
+  font-family: "Open Sans", sans-serif;
+  font-size: 30px;
+  letter-spacing: -1px;
+  padding-top: 0px;
+  margin-top: 3px;
+  padding-left: 5px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  float: left;
 
+}
+.titleBox{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+
+}
 .page-container {
   height: 100%;
   width: 100%;
@@ -21,7 +38,25 @@ html, body {
 
 .titleBar{
   height:50px;
-  background-color:#ffffff;
+  float:none;
+  position: absolute;;
+  z-index: 1;
+  width: 100%;
+  background-color: rgba(255, 255, 255, .5);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+.titleContent{
+  height: 100%;
+  z-index: 1;
+  width: 100%;
+  position: absolute;
+}
+.blur{
+  width: 100%;
+  height: 100%;
+  position: absolute;;
+  background-color: rgba(255, 255, 255, 0.9);;
+  filter: blur(1px);
 }
 
 .floating-logo{
