--- a/static/css/application.css
+++ b/static/css/application.css
@@ -6,29 +6,28 @@ html, body {
   padding: 0px;
 }
 
-.active{
+.active {
   background-color: #d9534f;
   color: #ffffff;
 }
 
-.title{
+.title {
   font-family: "Open Sans", sans-serif;
-  font-size: 30px;
-  letter-spacing: -1px;
+  font-size: 24px;
   padding-top: 0px;
   margin-top: 3px;
-  padding-left: 5px;
+  margin-left: 10px;
   padding-bottom: 0px;
   margin-bottom: 0px;
   float: left;
-
 }
+
 .titleBox{
   width: 100%;
   height: 100%;
   background-color: black;
-
 }
+
 .page-container {
   height: 100%;
   width: 100%;
@@ -37,13 +36,13 @@ html, body {
 }
 
 .titleBar{
-  height:50px;
+  height:40px;
   float:none;
   position: absolute;;
   z-index: 1;
   width: 100%;
   background-color: rgba(255, 255, 255, .5);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.8);
 }
 .titleContent{
   height: 100%;
@@ -51,12 +50,12 @@ html, body {
   width: 100%;
   position: absolute;
 }
+
 .blur{
   width: 100%;
   height: 100%;
-  position: absolute;;
-  background-color: rgba(255, 255, 255, 0.9);;
-  filter: blur(1px);
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .floating-logo{
@@ -69,11 +68,6 @@ html, body {
   z-index: 1;
 }
 
-.btn-sm {
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    border-radius: .2rem;
-}
 .btn {
     display: inline-block;
     font-weight: 400;
@@ -81,17 +75,17 @@ html, body {
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .5rem 1rem;
-    font-size: 1rem;
-    border-radius: .25rem;
+    padding: 0.2rem 0.6rem;
+    font-size: 0.9rem;
+    border-radius: 0.2rem;
     -webkit-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+    font-family: "Open Sans", sans-serif;
+    text-decoration: none;
+    margin-left: 5px;
 }
 
 .btn:hover{
@@ -105,6 +99,13 @@ html, body {
     background-image: none;
     background-color: transparent;
     border-color: #d9534f;
+}
+
+.buttons {
+    display: flex;
+    float: right;
+    margin-top: 7px;
+    margin-right: 10px;
 }
 
 #navheader {
