--- a/static/css/application.css
+++ b/static/css/application.css
@@ -4,6 +4,7 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
 .active {
@@ -12,8 +13,7 @@ html, body {
 }
 
 .title {
-  font-family: "Open Sans", sans-serif;
-  font-size: 24px;
+  font-size: 22px;
   padding-top: 0px;
   margin-top: 3px;
   margin-left: 10px;
@@ -22,7 +22,7 @@ html, body {
   float: left;
 }
 
-.titleBox{
+.titleBox {
   width: 100%;
   height: 100%;
   background-color: black;
@@ -35,81 +35,32 @@ html, body {
   padding: 0px;
 }
 
-.titleBar{
-  height:40px;
+.titleBar {
+  height:34px;
   float:none;
   position: absolute;;
   z-index: 1;
   width: 100%;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, 0.88);
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.8);
 }
-.titleContent{
+
+.titleContent {
   height: 100%;
   z-index: 1;
   width: 100%;
   position: absolute;
 }
 
-.blur{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.floating-logo {
-  float:none;
+.logo {
+  float: right;
   height: 24px;
-  bottom: 20px;
-  right: 5px;
-  width:auto;
-  position: fixed;
-  z-index: 1;
+  margin-top: 5px;
+  margin-right: 4px;
 }
 
-.floating-logo img {
+.logo img {
     height: 100%;
-}
-
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.25;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.2rem 0.6rem;
-    font-size: 0.9rem;
-    border-radius: 0.2rem;
-    -webkit-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    font-family: "Open Sans", sans-serif;
-    text-decoration: none;
-    margin-left: 5px;
-}
-
-.btn:hover{
-  background-color: #d9534f;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-.btn-outline-danger {
-    color: #d9534f;
-    background-image: none;
-    background-color: transparent;
-    border-color: #d9534f;
-}
-
-.buttons {
-    display: flex;
-    float: right;
-    margin-top: 7px;
-    margin-right: 10px;
 }
 
 #navheader {
