--- a/static/css/application.css
+++ b/static/css/application.css
@@ -4,31 +4,30 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
-.active{
+.active {
   background-color: #d9534f;
   color: #ffffff;
 }
 
-.title{
-  font-family: "Open Sans", sans-serif;
-  font-size: 30px;
-  letter-spacing: -1px;
+.title {
+  font-size: 22px;
   padding-top: 0px;
   margin-top: 3px;
-  padding-left: 5px;
+  margin-left: 10px;
   padding-bottom: 0px;
   margin-bottom: 0px;
   float: left;
-
 }
-.titleBox{
+
+.titleBox {
   width: 100%;
   height: 100%;
   background-color: black;
-
 }
+
 .page-container {
   height: 100%;
   width: 100%;
@@ -36,75 +35,32 @@ html, body {
   padding: 0px;
 }
 
-.titleBar{
-  height:50px;
+.titleBar {
+  height:34px;
   float:none;
   position: absolute;;
   z-index: 1;
   width: 100%;
-  background-color: rgba(255, 255, 255, .5);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.88);
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.8);
 }
-.titleContent{
+
+.titleContent {
   height: 100%;
   z-index: 1;
   width: 100%;
   position: absolute;
 }
-.blur{
-  width: 100%;
-  height: 100%;
-  position: absolute;;
-  background-color: rgba(255, 255, 255, 0.9);;
-  filter: blur(1px);
+
+.logo {
+  float: right;
+  height: 24px;
+  margin-top: 5px;
+  margin-right: 4px;
 }
 
-.floating-logo{
-  float:none;
-  height: 40px;
-  bottom: 20px;
-  right: 5px;
-  width:auto;
-  position: fixed;
-  z-index: 1;
-}
-
-.btn-sm {
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    border-radius: .2rem;
-}
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.25;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: .5rem 1rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-    -webkit-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-.btn:hover{
-  background-color: #d9534f;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-.btn-outline-danger {
-    color: #d9534f;
-    background-image: none;
-    background-color: transparent;
-    border-color: #d9534f;
+.logo img {
+    height: 100%;
 }
 
 #navheader {
