--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -4,103 +4,95 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+
 }
 
-.tab{
-  font-size: 1rem;
-  float:left;
-  border-width: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  margin: 0px;
-  width: 33.33%;
-
-  border-right-color: gray;
-  height: 100%;
-}
-
-.tabcontent {
-  text-align: center;
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border: none;
-}
-
-.tabcontent{
-}
-
-.tab:hover{
-  cursor: pointer;
-}
-
-.active{
-  background-color: #d9534f;
-  color: #ffffff;
-}
-
-.page-container {
-  height: 100%;
+.navbar{
+  background-color: #eee;
   width: 100%;
-  margin: 0px;
+  height: 34px;
+  float: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.title{
   padding: 0px;
+  margin-top: 6px;
+  font-size: 22px;
+  float:left;
 }
-
-.titleBar{
-  height:50px;
-  background-color:#ffffff;
-}
-
-.stop{
-  float: center;
-  width: 15rem;
-  height: 15rem;
-  display: inline-block;
-  background-color: #fff;
-  padding: 10px;
-  margin: 10px;
+.button{
+  padding: 5px;
+  font-size: 12px;
+  text-decoration: none;
+  background-color: none;
+  border-radius: 5px;
   border-style: solid;
-  border-radius: .25rem;
+  border-color: #e74c3c;
   border-width: 1px;
-  border-color: rgba(0, 0, 0, 0.25);
-  -webkit-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  transition: background-color 0.5s ease;
+  color: #e74c3c;
+}
+.button:hover{
+  background-color: #e74c3c;
+  color: #eee;
+
 }
 
-.stop:hover{
-  background-color: rgba(255, 255, 255, .1);
-}
+.logout{
+  margin-right: 10px;
+  margin: 3px;
+  float: right;
 
-.rbtn{
-  float:fixed;
-  bottom: 1px;
-  right:1px;
-  margin: 1px;
-  border-style: solid;
-  border-radius: 50%;
-  width:30px;
-  height: 30px;
-  border-color: rgba(0, 0, 0, 0.25);
-  border-width: 1px;
-  background-color: transparent;
-  -webkit-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
 }
-
-.floating-logo{
-  float:none;
-  height: 40px;
-  bottom: 20px;
-  right: 5px;
-  width:auto;
+.routePanel{
   position: fixed;
-  z-index: 1;
+  height: auto;
+  float: none;
+  top: 34px;
 }
 
-.rbtn:hover{
-  background-color: #d9534f;
-  color: #ffffff;
-  cursor: pointer;
+.logout:hover{
+  background-color: #e74c3c;
+  color: #eee;
+
+}
+.docBody{
+  position: absolute;
+  float:none;
+  top:34px;
+  bottom: 0;
+  height: auto;
+  width: 100%;
+}
+.routePanel{
+  width: 50%;
+  float: left;
+}
+.mapPanel{
+  width: 50%;
+  float: right;
+  height: 100%;
+}
+.route-description-box{
+  padding: 20px;
+  margin-top:10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  background-color: white;
+  height: auto;
+}
+.emphasis{
+  padding: 0px;
+  margin: 0px;
+  font-weight: bold;
+}
+
+.content{
+  padding: 0px;
+  margin: 0px;
 }
