--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -60,13 +60,10 @@ html, body {
   margin-top: 10px;
 }
 .textbox{
-  width: 70%;
-  float: right;;
-  border-radius: 5px;
-  border-style: solid;;
-  border-width: 1px;
-  right: 0px;
-  height: 20px;
+  float: right;
+  border-style: none;;
+  border-width: 0px;
+  height: 15px;
 
   background-color: rgba(255,255,255,.5);
   box-shadow: inset 1px 1px 2px 0 #707070;
@@ -116,7 +113,6 @@ html, body {
   font-size: 12px;
   text-decoration: none;
   background-color: none;
-  border-radius: 5px;
   border-style: solid;
   border-color: #e74c3c;
   border-width: 1px;
@@ -157,12 +153,13 @@ html, body {
   width: 100%;
 }
 .routePanel{
-  width: 50%;
+  width: 100%;
   height: 100%;
   overflow: scroll;
   float: left;
 }
 .mapPanel{
+  display: none;
   width: 50%;
   float: right;
   height: 100%;
