--- a/static/css/application.css
+++ b/static/css/application.css
@@ -73,3 +73,94 @@ html, body {
   color: white;
   text-decoration: none;
 }
+
+
+/* CSS for dropdown menus */
+.dropdown {
+  list-style: none;
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+}
+
+.dropdown-schedule {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 32px;
+  padding: 0px 15px;
+}
+
+a.dropdown-schedule {
+  padding: 0px 3px;
+  height: 34px;
+}
+
+a.dropdown-schedule > img{
+  box-sizing: border-box;
+  padding: 5px;
+}
+
+.dropdown li {
+  position: relative;
+  float: left;
+  margin: 0px;
+  padding: 0px;
+}
+
+.dropdown > li {
+  background: #ddd;
+}
+
+.dropdown li:hover {
+  background: rgba(226, 226, 226, 0.85);
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  background: rgba(238, 238, 238, 0.90);
+  padding: 0px;
+}
+
+.dropdown-menu li {
+  float: none;
+  width: 225px;
+}
+
+.dropdown-menu p {
+  height: 24px;
+  margin: 3px 5px;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
+  padding: 3px 5px 3px 20px;
+  box-sizing: border-box;
+  color: #333333;
+}
+
+.dropdown-menu a:visited {
+  text-decoration: none;
+  color: #333333;
+}
+
+.dropdown-menu ul {
+  top: 0px;
+  left: 100%;
+}
+
+.dropdown li:hover > ul {
+  display: block;
+  /* makes menu visible */
+}
+
+#schedule-menu {
+  font-size: large;
+  font-weight: 500;
+}
+/* ===================== */
