allow adding routes by json

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -179,6 +179,7 @@ html, body {
   margin-top:10px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 20px;
   width: 90%;
   background-color: white;
   height: auto;
