begin main structure for vehicles interface using vue

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -133,9 +133,18 @@ html, body {
 
 }
 .routePanel{
+  display: none;
   position: fixed;
   height: auto;
   float: none;
+  top: 34px;
+}
+.vehicle-panel{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  float: none;
+  background-color: transparent;;
   top: 34px;
 }
 
