--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -26,6 +26,7 @@ html, body {
   position: absolute;
   top: 0;
   left: 0;
+  user-select:none;
 }
 .prompttext{
   color: black;
@@ -39,7 +40,9 @@ html, body {
   margin: auto;
   text-align: center;
 }
-
+.rtb{
+  display:none;
+}
 .title{
   padding: 0px;
   margin-top: 6px;
@@ -108,6 +111,7 @@ html, body {
   background-color: transparent;
 }
 .button{
+  user-select: none;
   margin: 2px;
   padding: 5px;
   font-size: 12px;
@@ -133,9 +137,19 @@ html, body {
 
 }
 .routePanel{
+  display: none;
   position: fixed;
   height: auto;
   float: none;
+  top: 34px;
+}
+.vehicle-panel{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  float: none;
+  background-color: transparent;
+  overflow: scroll;
   top: 34px;
 }
 
